name: turbulent-sniffle
version: 0.1.0
build-type: Simple
cabal-version: >= 1.22

data-files: index.html

executable turbulent-sniffle
  main-is: Main.lhs
  other-modules: Paths_turbulent_sniffle
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.8 && < 4.9
    , bytestring
    , directory
    , snap-core >= 0.9 && < 0.10
    , snap-server >= 0.9 && < 0.10
    , transformers
  default-language: Haskell2010
