name: turbulent-sniffle
version: 0.1.0
build-type: Simple
cabal-version: >= 1.22

data-files: index.html

executable turbulent-sniffle
  main-is: Main.lhs
  other-modules: Paths_turbulent_sniffle
  ghc-options: -Wall
  build-depends:
      base >= 4.9 && < 4.10
    , bytestring
    , directory
    , snap-core >= 1.0 && < 1.1
    , snap-server >= 1.0 && < 1.1
    , text >= 1.2 && < 1.3
    , transformers
  default-language: Haskell2010
